--- a/ui/.eslintrc
+++ b/ui/.eslintrc
@@ -14,6 +14,7 @@
   ],
   "rules": {
     "no-console": 1,
-    "prettier/prettier": 2
+    "prettier/prettier": 2,
+    "@typescript-eslint/no-empty-interface": 0
   }
 }
