--- a/.github/workflows/development.yml
+++ b/.github/workflows/development.yml
@@ -14,26 +14,22 @@ jobs:
   deploy-api:
     runs-on: 'ubuntu-latest'
     steps:
-    - uses: actions/checkout@v1
-
+    - name: Checkout
+      uses: actions/checkout@v1
     - name: Set up QEMU
       uses: docker/setup-qemu-action@v1
-    
     - name: Set up Docker Buildx
       uses: docker/setup-buildx-action@v1
-    
     - name: Login to DockerHub
       uses: docker/login-action@v1 
       with:
         username: ${{ secrets.DOCKERHUB_USERNAME }}
         password: ${{ secrets.DOCKERHUB_TOKEN }}
-    
     - name: Build and push
       uses: docker/build-push-action@v2
       with:
         push: true
         tags: alexbrown201/fandanzle-v2-api:latest
-
     - name: 'Deploy'
       uses: 'deliverybot/helm@v1'
       with:
