--- a/.github/workflows/development.yml
+++ b/.github/workflows/development.yml
@@ -20,14 +20,13 @@ jobs:
 
     - name: Login to DockerHub
       uses: docker/login-action@v1 
-      working-directory: api
       with:
         username: ${{ secrets.DOCKER_USERNAME }}
         password: ${{ secrets.DOCKER_PASSWORD }}
 
     - name: Build and push
       uses: docker/build-push-action@v2
-      working-directory: api
       with:
+        context: "{{defaultContext}}:api"
         push: true
         tags: alexbrown201/fandanzle-v2-api:latest
