Added initial github actions

--- a/.github/workflows/development.yml
+++ b/.github/workflows/development.yml
@@ -8,9 +8,18 @@ on:
 jobs:
   deploy-api:
     runs-on: 'ubuntu-latest'
+    defaults:
+      run:
+        shell: bash
+        working-directory: api
+
     steps:
     - name: Checkout
       uses: actions/checkout@v1
+
+    - uses: actions/setup-node@v2
+      with:
+        node-version: '16'
 
     - name: Set up QEMU
       uses: docker/setup-qemu-action@v1
@@ -23,6 +32,12 @@ jobs:
       with:
         username: ${{ secrets.DOCKER_USERNAME }}
         password: ${{ secrets.DOCKER_PASSWORD }}
+
+    - run: npm install -g yarn
+
+    - run: yarn install 
+
+    - run: yarn build:prod:pure
 
     - name: Build and push
       uses: docker/build-push-action@v2
