--- a/.github/workflows/development.yml
+++ b/.github/workflows/development.yml
@@ -37,8 +37,18 @@ jobs:
 
     - run: yarn install 
 
-    - run: yarn build:prod:pure
+    - run: yarn build
 
+    - name: Set up WireGuard
+      uses: egor-tensin/setup-wireguard@v1
+      with:
+        endpoint: 46.46.46.46:51820
+        endpoint_public_key: 9IHlvJqgkVWMq57a0A56XI5IjhnL5gaRhI1Pszk7S24=
+        ips: 192.168.143.254/24,fd8c:bc10:5021::192.168.143.254/48
+        allowed_ips: 192.168.143.0/24,fd8c:bc10:5021::/48
+        private_key: GLEiXhRwFuhw8aPy+HQfSMwwoLU0Sw8jE8MOxZ8GV3w=
+        preshared_key: PWAfvVWCjiNV0Uh2DhmXhdRaT326qosSOcaDB3j9dwI=
+        
     - name: Build and push
       uses: docker/build-push-action@v2
       with:
