--- a/.github/workflows/on_merge_main.yml
+++ b/.github/workflows/on_merge_main.yml
@@ -6,8 +6,11 @@ on:
       - main
 
 jobs:
+
   deploy-api:
     runs-on: 'ubuntu-latest'
+    if: github.event_name == 'pull_request' && github.event.action == 'closed' && github.event.pull_request.merged == true
+
     defaults:
       run:
         shell: bash
