--- a/.github/workflows/on_push_development.yml
+++ b/.github/workflows/on_push_development.yml
@@ -8,6 +8,8 @@ on:
 jobs:
   deploy-api:
     runs-on: 'ubuntu-latest'
+    if: github.event_name == 'pull_request' && github.event.action == 'closed' && github.event.pull_request.merged == true
+
     defaults:
       run:
         shell: bash
