--- a/.github/workflows/on_push_development.yml
+++ b/.github/workflows/on_push_development.yml
@@ -31,7 +31,7 @@ jobs:
       run: echo '${{ toJSON(github) }}'
 
     - name: Branch name
-      run: echo running on branch ${{ github.head_ref }
+      run: echo running on branch ${{ github.head_ref }}
 
     - run: 'echo "$VPN_CONFIG" > config.ovpn'
       env:
