--- a/.github/workflows/on_push_development.yml
+++ b/.github/workflows/on_push_development.yml
@@ -31,7 +31,7 @@ jobs:
       run: echo '${{ toJSON(github) }}'
 
     - name: Branch name
-      run: echo running on branch ${{ github.head_ref }}
+      run: echo running on branch ${{ github.ref_name }}
 
     - run: 'echo "$VPN_CONFIG" > config.ovpn'
       env:
@@ -68,7 +68,7 @@ jobs:
     - run: yarn build:prod:pure
 
     - name: Create S3 bucket
-      run: aws s3api create-bucket --bucket devnotnull.com-${{ github.head_ref }} --region us-east-1
+      run: aws s3api create-bucket --bucket devnotnull.com-${{ github.ref_name }} --region us-east-1
 
     - name: Build and push
       uses: docker/build-push-action@v2
@@ -76,12 +76,12 @@ jobs:
         context: .
         file: ./Dockerfile
         push: true
-        tags: alexbrown201/devnotnull-ui:${{ github.head_ref }} 
+        tags: alexbrown201/devnotnull-ui:${{ github.ref_name }} 
         
     - name: Deploy
       uses: vimeda/helm@v1.6.8
       with:
-        release: 'devnotnull-ui-${{ github.head_ref }}'
+        release: 'devnotnull-ui-${{ github.ref_name }}'
         namespace: 'default'
         repo: 'https://devnotnull-helm.s3.eu-west-2.amazonaws.com'
         repo-alias: devnotnull
@@ -89,7 +89,7 @@ jobs:
         token: '${{ github.token }}'
         values: |
           image: 
-            repository: "alexbrown201/devnotnull-ui:${{ github.head_ref }} "
+            repository: "alexbrown201/devnotnull-ui:${{ github.ref_name }} "
             pullPolicy: Always
           name: foobar
           port: 3000
