--- a/.github/workflows/on_push_development.yml
+++ b/.github/workflows/on_push_development.yml
@@ -25,10 +25,15 @@ jobs:
     - uses: actions/setup-node@v2
       with:
         node-version: '16'
-      
-    - name: Dump GitHub context
-      id: github_context_step
-      run: echo '${{ toJSON(github) }}'
+
+    - name: Configure AWS Credentials
+      uses: aws-actions/configure-aws-credentials@v1
+      with:
+        aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+        aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+        aws-region: eu-west-2
+        role-duration-seconds: 1200
+        role-session-name: MySessionName
 
     - name: Branch name
       run: echo running on branch ${{ github.ref_name }}
