--- a/.github/workflows/on_push_development.yml
+++ b/.github/workflows/on_push_development.yml
@@ -19,6 +19,24 @@ jobs:
 
     steps:
 
+    - name: Deploy
+      uses: vimeda/helm@v1.6.8
+      with:
+        release: 'devnotnull-ui-${{ github.ref_name }}'
+        namespace: 'default'
+        repo: 'https://devnotnull-helm.s3.eu-west-2.amazonaws.com'
+        repo-alias: devnotnull
+        chart: 'devnotnull/nodejs-template'
+        token: '${{ github.token }}'
+        values: |
+          image: 
+            repository: "alexbrown201/devnotnull-ui:${{ github.ref_name }} "
+            pullPolicy: Always
+          name: foobar
+          port: 3000
+          service:
+            type: LoadBalancer
+            
     - name: Checkout
       uses: actions/checkout@v2
 
