--- a/.github/workflows/on_push_development.yml
+++ b/.github/workflows/on_push_development.yml
@@ -69,7 +69,7 @@ jobs:
     - name: Deploy
       uses: vimeda/helm@v1.6.8
       with:
-        release: 'devnotnull-ui-${{ github.ref_name }}'
+        release: 'devnotnull-ui'
         namespace: 'default'
         repo: 'https://devnotnull-helm.s3.eu-west-2.amazonaws.com'
         repo-alias: devnotnull
@@ -77,7 +77,7 @@ jobs:
         token: '${{ github.token }}'
         values: |
           image: 
-            repository: "alexbrown201/devnotnull-ui:${{ github.ref_name }} "
+            repository: "alexbrown201/devnotnull-ui:latest"
             pullPolicy: Always
           name: foobar
           port: 3000
