Added gitub actions base config

--- a/.github/workflows/on_push_development.yml
+++ b/.github/workflows/on_push_development.yml
@@ -77,7 +77,7 @@ jobs:
         token: '${{ github.token }}'
         values: |
           image: 
-            repository: "alexbrown201/devnotnull-ui:latest"
+            repository: "alexbrown201/devnotnull-ui:${{ github.ref_name }}"
             pullPolicy: Always
           name: foobar
           port: 3000
