--- a/.github/workflows/on_push_development.yml
+++ b/.github/workflows/on_push_development.yml
@@ -7,8 +7,7 @@ on:
 
 jobs:
   deploy-api:
-    runs-on: 'self-hosted'
-
+    runs-on: 'ubuntu-latest'
     defaults:
       run:
         shell: bash
