--- a/.github/workflows/on_merge_main.yml
+++ b/.github/workflows/on_merge_main.yml
@@ -69,7 +69,7 @@ jobs:
       run: aws s3api create-bucket --bucket devnotnull-ui-production --region us-east-1
 
     - name: Copy S3 bucket assets
-      run: aws s3 cp ./build s3://devnotnull-ui-production / --recursive
+      run: aws s3 cp ./build s3://devnotnull-ui-production --recursive
 
     - name: Deploy
       uses: vimeda/helm@v1.6.8
