--- a/.github/workflows/on_push_development.yml
+++ b/.github/workflows/on_push_development.yml
@@ -75,7 +75,7 @@ jobs:
       run: aws s3api create-bucket --bucket devnotnull-ui-${{ github.ref_name }} --region us-east-1
 
     - name: Copy S3 bucket assets
-      run: aws s3 cp ./build s3://devnotnull-ui-${{ github.ref_name }} / --recursive
+      run: aws s3 cp ./build s3://devnotnull-ui-${{ github.ref_name }} --recursive
 
     - name: Build and push
       uses: docker/build-push-action@v2
