--- a/.github/workflows/on_push_development.yml
+++ b/.github/workflows/on_push_development.yml
@@ -66,7 +66,7 @@ jobs:
         password: ${{ secrets.OVPN_PASSWORD }}
 
     - name: 'Deploy'
-      uses: 'deliverybot/helm@v1'
+      uses: 'vimeda/helm@v1.6.8'
       with:
         release: 'nginx'
         track: canary
@@ -75,7 +75,7 @@ jobs:
         token: '${{ github.token }}'
         values: |
           name: foobar
-          
+
     - run: npm install -g yarn
 
     - run: yarn install 
