S3 bucket migrated to https

--- a/.github/workflows/on_push_development.yml
+++ b/.github/workflows/on_push_development.yml
@@ -68,13 +68,13 @@ jobs:
     - name: 'Deploy'
       uses: 'vimeda/helm@v1.6.8'
       with:
-        release: 'nginx'
+        release: 'nginx-test'
         track: canary
         namespace: 'default'
         chart: 'app'
         token: '${{ github.token }}'
-        values: |
-          name: foobar
+      env:
+        KUBECONFIG_FILE: '${{ secrets.PROD_KUBECONFIG }}'
 
     - run: npm install -g yarn
 
