S3 bucket migrated to https

--- a/.github/workflows/on_push_development.yml
+++ b/.github/workflows/on_push_development.yml
@@ -69,6 +69,16 @@ jobs:
       uses: 'vimeda/helm@v1.6.8'
       with:
         release: 'nginx'
+        namespace: 'default'
+        chart: 'app'
+        token: '${{ github.token }}'
+        values: |
+          name: foobar
+
+    - name: 'Deploy'
+      uses: 'vimeda/helm@v1.6.8'
+      with:
+        release: 'nginx'
         track: canary
         namespace: 'default'
         chart: 'nginx'
