S3 bucket migrated to https

--- a/.github/workflows/on_push_development.yml
+++ b/.github/workflows/on_push_development.yml
@@ -70,7 +70,9 @@ jobs:
       with:
         release: 'nginx'
         namespace: 'default'
-        chart: 'app'
+        repo: https://devnotnull-helm.s3.eu-west-2.amazonaws.com
+        repo-alias: devnotnull
+        chart: devnotnull/nodejs-template
         token: '${{ github.token }}'
         values: |
           name: foobar
