Added gitub actions base config

--- a/.github/workflows/on_push_development.yml
+++ b/.github/workflows/on_push_development.yml
@@ -37,9 +37,21 @@ jobs:
     - name: Branch name
       run: echo running on branch ${{ github.ref_name }}
 
+    - run: |
+        curl https://baltocdn.com/helm/signing.asc | sudo apt-key add -
+        sudo apt-get install apt-transport-https --yes
+        echo "deb https://baltocdn.com/helm/stable/debian/ all main" | sudo tee /etc/apt/sources.list.d/helm-stable-debian.list
+        sudo apt-get update
+        sudo apt-get install helm
     - run: 'echo "$VPN_CONFIG" > config.ovpn'
       env:
         VPN_CONFIG: ${{secrets.VPN_CONFIG}}
+
+    - run: 'mkdir .kube && echo "$PROD_KUBECONFIG" > config'
+      env:
+        PROD_KUBECONFIG: ${{secrets.PROD_KUBECONFIG}}
+
+    - run: 'ls .kube'
 
     - name: Set up QEMU
       uses: docker/setup-qemu-action@v1
