--- a/.github/workflows/on_push_development.yml
+++ b/.github/workflows/on_push_development.yml
@@ -65,16 +65,15 @@ jobs:
         username: ${{ secrets.DOCKER_USERNAME }}
         password: ${{ secrets.DOCKER_PASSWORD }}
 
-    - run: |
-      helm repo add devnotnull https://devnotnull-helm.s3.eu-west-2.amazonaws.com
+    - run: helm repo add devnotnull https://devnotnull-helm.s3.eu-west-2.amazonaws.com
 
     - run: |
-      helm install devnotnull-ui devnotnull/nodejs-template \
-      --set image.repository=alexbrown201/devnotnull-ui:latest \
-      --set port=3000 \
-      --set service.type=LoadBalancer \
-      --set service.loadBalancerIP=10.150.10.134 \
-      --set image.pullPolicy=Always
+        helm install devnotnull-ui devnotnull/nodejs-template \
+        --set image.repository=alexbrown201/devnotnull-ui:latest \
+        --set port=3000 \
+        --set service.type=LoadBalancer \
+        --set service.loadBalancerIP=10.150.10.134 \
+        --set image.pullPolicy=Always
 
     - name: Install OpenVPN
       run: |
