--- a/.github/workflows/on_push_development.yml
+++ b/.github/workflows/on_push_development.yml
@@ -47,12 +47,25 @@ jobs:
       env:
         VPN_CONFIG: ${{secrets.VPN_CONFIG}}
 
-    - run: 'mkdir .kube && echo "$PROD_KUBECONFIG" > .kube/config'
+    - run: 'mkdir ~/.kube && echo "$PROD_KUBECONFIG" > ~/.kube/config'
       env:
         PROD_KUBECONFIG: ${{secrets.PROD_KUBECONFIG}}
 
-    - run: 'cat .kube/config'
-    - run: 'ls .kube'
+    - run: 'cat ~/.kube/config'
+    
+    - run: 'ls ~/.kube'
+
+    - name: 'Deploy'
+      uses: 'deliverybot/helm@v1'
+      with:
+        release: 'review-myapp-${{ github.event.pull_request.number }}'
+        version: '${{ github.sha }}'
+        track: 'stable'
+        chart: 'app'
+        namespace: 'example-helm'
+        token: '${{ github.token }}'
+      env:
+        KUBECONFIG_FILE: '${{ secrets.PROD_KUBECONFIG }}'
 
     - name: Set up QEMU
       uses: docker/setup-qemu-action@v1
