--- a/.github/workflows/on_push_development.yml
+++ b/.github/workflows/on_push_development.yml
@@ -55,18 +55,6 @@ jobs:
 
     - run: 'ls ~/.kube'
 
-    - name: 'Deploy'
-      uses: 'glopezep/helm@v1.7.1'
-      with:
-        release: 'review-myapp-${{ github.event.pull_request.number }}'
-        version: '${{ github.sha }}'
-        track: 'stable'
-        chart: 'app'
-        namespace: 'example-helm'
-        token: '${{ github.token }}'
-      env:
-        KUBECONFIG_FILE: '${{ secrets.PROD_KUBECONFIG }}'
-
     - name: Set up QEMU
       uses: docker/setup-qemu-action@v1
 
@@ -78,16 +66,6 @@ jobs:
       with:
         username: ${{ secrets.DOCKER_USERNAME }}
         password: ${{ secrets.DOCKER_PASSWORD }}
-
-    - run: helm repo add devnotnull https://devnotnull-helm.s3.eu-west-2.amazonaws.com
-
-    - run: |
-        helm install devnotnull-ui devnotnull/nodejs-template \
-        --set image.repository=alexbrown201/devnotnull-ui:latest \
-        --set port=3000 \
-        --set service.type=LoadBalancer \
-        --set service.loadBalancerIP=10.150.10.134 \
-        --set image.pullPolicy=Always
 
     - name: Install OpenVPN
       run: |
@@ -101,29 +79,28 @@ jobs:
         username: ${{ secrets.OVPN_USERNAME }}
         password: ${{ secrets.OVPN_PASSWORD }}
 
-    - name: 'Deploy'
-      uses: 'vimeda/helm@v1.6.8'
-      with:
-        release: 'nginx'
-        namespace: 'default'
-        repo: https://devnotnull-helm.s3.eu-west-2.amazonaws.com
-        repo-alias: devnotnull
-        chart: devnotnull/nodejs-template
-        token: '${{ github.token }}'
-        values: |
-          name: foobar
+    - run: helm repo add devnotnull https://devnotnull-helm.s3.eu-west-2.amazonaws.com
+
+    - run: |
+        helm install devnotnull-ui devnotnull/nodejs-template \
+        --set image.repository=alexbrown201/devnotnull-ui:latest \
+        --set port=3000 \
+        --set service.type=LoadBalancer \
+        --set service.loadBalancerIP=10.150.10.134 \
+        --set image.pullPolicy=Always
 
     - name: 'Deploy'
-      uses: 'vimeda/helm@v1.6.8'
+      uses: 'glopezep/helm@v1.7.1'
       with:
-        release: 'nginx'
-        track: canary
-        namespace: 'default'
-        chart: 'nginx'
+        release: 'review-myapp-${{ github.event.pull_request.number }}'
+        version: '${{ github.sha }}'
+        track: 'stable'
+        chart: 'app'
+        namespace: 'example-helm'
         token: '${{ github.token }}'
       env:
         KUBECONFIG_FILE: '${{ secrets.PROD_KUBECONFIG }}'
-
+        
     - run: npm install -g yarn
 
     - run: yarn install 
@@ -145,14 +122,14 @@ jobs:
         tags: alexbrown201/devnotnull-ui:${{ github.ref_name }} 
         
     - name: Deploy
-      uses: vimeda/helm@v1.6.8
+      uses: 'glopezep/helm@v1.7.1'
       with:
-        release: devnotnull-ui-${{ github.ref_name }}
+        release: 'devnotnull-ui-${{ github.ref_name }}'
         namespace: 'default'
-        repo: https://devnotnull-helm.s3.eu-west-2.amazonaws.com
-        repo-alias: devnotnull
-        chart: devnotnull/nodejs-template
-        token: ${{ github.token }}
+        repo: 'https://devnotnull-helm.s3.eu-west-2.amazonaws.com'
+        repo-alias: 'devnotnull'
+        chart: 'devnotnull/nodejs-template'
+        token: '${{ github.token }}'
         values: |
           image: 
             repository: "alexbrown201/devnotnull-ui:${{ github.ref_name }}"
