--- a/.github/workflows/on_push_development.yml
+++ b/.github/workflows/on_push_development.yml
@@ -82,25 +82,33 @@ jobs:
     - run: helm repo add devnotnull https://devnotnull-helm.s3.eu-west-2.amazonaws.com
 
     - run: |
-        helm install devnotnull-ui devnotnull/nodejs-template \
+        helm install --install devnotnull-ui devnotnull/nodejs-template \
         --set image.repository=alexbrown201/devnotnull-ui:latest \
         --set port=3000 \
         --set service.type=LoadBalancer \
         --set service.loadBalancerIP=10.150.10.134 \
         --set image.pullPolicy=Always
 
-    - name: 'Deploy'
+    - name: Deploy
       uses: 'glopezep/helm@v1.7.1'
       with:
-        release: 'review-myapp-${{ github.event.pull_request.number }}'
-        version: '${{ github.sha }}'
-        track: 'stable'
-        chart: 'app'
-        namespace: 'example-helm'
+        release: 'devnotnull-ui-${{ github.ref_name }}'
+        namespace: 'default'
+        repo: 'https://devnotnull-helm.s3.eu-west-2.amazonaws.com'
+        repo-alias: 'devnotnull'
+        chart: 'devnotnull/nodejs-template'
         token: '${{ github.token }}'
+        values: |
+          image: 
+            repository: "alexbrown201/devnotnull-ui:${{ github.ref_name }}"
+            pullPolicy: Always
+          name: foobar
+          port: 3000
+          service:
+            type: LoadBalancer
       env:
         KUBECONFIG_FILE: '${{ secrets.PROD_KUBECONFIG }}'
-        
+
     - run: npm install -g yarn
 
     - run: yarn install 
@@ -121,22 +129,3 @@ jobs:
         push: true
         tags: alexbrown201/devnotnull-ui:${{ github.ref_name }} 
         
-    - name: Deploy
-      uses: 'glopezep/helm@v1.7.1'
-      with:
-        release: 'devnotnull-ui-${{ github.ref_name }}'
-        namespace: 'default'
-        repo: 'https://devnotnull-helm.s3.eu-west-2.amazonaws.com'
-        repo-alias: 'devnotnull'
-        chart: 'devnotnull/nodejs-template'
-        token: '${{ github.token }}'
-        values: |
-          image: 
-            repository: "alexbrown201/devnotnull-ui:${{ github.ref_name }}"
-            pullPolicy: Always
-          name: foobar
-          port: 3000
-          service:
-            type: LoadBalancer
-      env:
-        KUBECONFIG_FILE: '${{ secrets.PROD_KUBECONFIG }}'
