--- a/.github/workflows/on_push_development.yml
+++ b/.github/workflows/on_push_development.yml
@@ -78,6 +78,15 @@ jobs:
 
     - run: helm repo add devnotnull https://devnotnull-helm.s3.eu-west-2.amazonaws.com
 
+    - run: |
+        helm upgrade --install devnotnull-ui-${{ github.ref_name }} devnotnull/nodejs \
+        -f ~./helm/values-development.yaml \
+        --version 1 \
+        --set image.repository=alexbrown201/devnotnull-ui::${{ github.ref_name }} \
+        --set port=3000 \
+        --set service.type=LoadBalancer \
+        --set image.pullPolicy=Always
+        
     - run: npm install -g yarn
 
     - run: yarn install 
@@ -100,7 +109,7 @@ jobs:
   
     - run: |
         helm upgrade --install devnotnull-ui-${{ github.ref_name }} devnotnull/nodejs \
-        -f ./helm/values-development.yaml \
+        -f ~./helm/values-development.yaml \
         --version 1 \
         --set image.repository=alexbrown201/devnotnull-ui::${{ github.ref_name }} \
         --set port=3000 \
