--- a/.github/workflows/on_push_development.yml
+++ b/.github/workflows/on_push_development.yml
@@ -79,8 +79,10 @@ jobs:
     - run: helm repo add devnotnull https://devnotnull-helm.s3.eu-west-2.amazonaws.com
 
     - run: |
-        helm upgrade --install devnotnull-ui-${{ github.ref_name }} devnotnull/nodejs \
+       helm upgrade --install devnotnull-ui-${{ github.ref_name }} devnotnull/nodejs \
         -f ./helm/values-development.yaml \
+        --set env.NODE_RUNTIME_ENV=development
+        --set env.CDN_BUCKET=devnotnull-ui-${{ github.ref_name }}
         --version 1 \
         --set image.repository=alexbrown201/devnotnull-ui:${{ github.ref_name }} \
         --set port=3000 \
@@ -108,8 +110,10 @@ jobs:
         tags: alexbrown201/devnotnull-ui:${{ github.ref_name }} 
   
     - run: |
-        helm upgrade --install devnotnull-ui-${{ github.ref_name }} devnotnull/nodejs \
+       helm upgrade --install devnotnull-ui-${{ github.ref_name }} devnotnull/nodejs \
         -f ./helm/values-development.yaml \
+        --set env.NODE_RUNTIME_ENV=development
+        --set env.CDN_BUCKET=devnotnull-ui-${{ github.ref_name }}
         --version 1 \
         --set image.repository=alexbrown201/devnotnull-ui:${{ github.ref_name }} \
         --set port=3000 \
