--- a/.github/workflows/on_push_development.yml
+++ b/.github/workflows/on_push_development.yml
@@ -82,7 +82,7 @@ jobs:
        helm upgrade --install devnotnull-ui-${{ github.ref_name }} devnotnull/nodejs \
         -f ./helm/values-development.yaml \
         --set env.NODE_RUNTIME_ENV=development
-        --set env.CDN_BUCKET=devnotnull-ui-${{ github.ref_name }}
+        --set env.CDN_BUCKET=devnotnull-ui-${{ github.ref_name }} \
         --version 1 \
         --set image.repository=alexbrown201/devnotnull-ui:${{ github.ref_name }} \
         --set port=3000 \
@@ -113,7 +113,7 @@ jobs:
        helm upgrade --install devnotnull-ui-${{ github.ref_name }} devnotnull/nodejs \
         -f ./helm/values-development.yaml \
         --set env.NODE_RUNTIME_ENV=development
-        --set env.CDN_BUCKET=devnotnull-ui-${{ github.ref_name }}
+        --set env.CDN_BUCKET=devnotnull-ui-${{ github.ref_name }} \
         --version 1 \
         --set image.repository=alexbrown201/devnotnull-ui:${{ github.ref_name }} \
         --set port=3000 \
