Added gitub actions base config

--- a/.github/workflows/on_push_development.yml
+++ b/.github/workflows/on_push_development.yml
@@ -78,17 +78,6 @@ jobs:
 
     - run: helm repo add devnotnull https://devnotnull-helm.s3.eu-west-2.amazonaws.com
 
-    - run: |
-       helm upgrade --install devnotnull-ui-${{ github.ref_name }} devnotnull/nodejs \
-        -f ./helm/values-development.yaml \
-        --set env.NODE_RUNTIME_ENV=development \
-        --set env.CDN_BUCKET=devnotnull-ui-${{ github.ref_name }} \
-        --version 1 \
-        --set image.repository=alexbrown201/devnotnull-ui:${{ github.ref_name }} \
-        --set port=3000 \
-        --set service.type=LoadBalancer \
-        --set image.pullPolicy=Always
-
     - run: npm install -g yarn
 
     - run: yarn install 
@@ -100,6 +89,12 @@ jobs:
 
     - name: Copy S3 bucket assets
       run: aws s3 cp ./build s3://devnotnull-ui-${{ github.ref_name }} --recursive
+
+    - name: Copy S3 bucket assets
+      run: aws s3api put-bucket-policy --bucket devnotnull-ui-${{ github.ref_name }} --policy file://./deploy/s3-policy.json
+
+    - run: |
+        aws s3api put-bucket-cors --bucket devnotnull-ui-${{ github.ref_name }} --cors-configuration '{"CORSRules" : [{"AllowedHeaders":["*"],"AllowedMethods":["GET","HEAD", "POST"],"AllowedOrigins":["*"],"ExposeHeaders":[]}]}'
 
     - name: Build and push
       uses: docker/build-push-action@v2
