--- a/.github/workflows/on_merge_main.yml
+++ b/.github/workflows/on_merge_main.yml
@@ -15,7 +15,9 @@ jobs:
       AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
       AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
       KUBECONFIG_FILE: '${{ secrets.PROD_KUBECONFIG }}'
+
     steps:
+
     - name: Checkout
       uses: actions/checkout@v2
 
@@ -23,9 +25,32 @@ jobs:
       with:
         node-version: '16'
 
+    - name: Configure AWS Credentials
+      uses: aws-actions/configure-aws-credentials@v1
+      with:
+        aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+        aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+        aws-region: eu-west-2
+        role-duration-seconds: 1200
+        role-session-name: MySessionName
+
+    - name: Branch name
+      run: echo running on branch ${{ github.ref_name }}
+
+    - run: |
+        curl https://baltocdn.com/helm/signing.asc | sudo apt-key add -
+        sudo apt-get install apt-transport-https --yes
+        echo "deb https://baltocdn.com/helm/stable/debian/ all main" | sudo tee /etc/apt/sources.list.d/helm-stable-debian.list
+        sudo apt-get update
+        sudo apt-get install helm
+        
     - run: 'echo "$VPN_CONFIG" > config.ovpn'
       env:
         VPN_CONFIG: ${{secrets.VPN_CONFIG}}
+
+    - run: 'mkdir ~/.kube && echo "$PROD_KUBECONFIG" > ~/.kube/config'
+      env:
+        PROD_KUBECONFIG: ${{secrets.PROD_KUBECONFIG}}
 
     - name: Set up QEMU
       uses: docker/setup-qemu-action@v1
@@ -70,6 +95,11 @@ jobs:
 
     - name: Copy S3 bucket assets
       run: aws s3 cp ./build s3://devnotnull-ui-production --recursive
+      
+    - run: |
+        aws s3api put-bucket-cors --bucket devnotnull-ui-production --cors-configuration '{"CORSRules" : [{"AllowedHeaders":["*"],"AllowedMethods":["GET","HEAD", "POST"],"AllowedOrigins":["*"],"ExposeHeaders":[]}]}'
+
+    - run: helm repo add devnotnull https://devnotnull-helm.s3.eu-west-2.amazonaws.com
 
     - run: |
         helm upgrade --install devnotnull-ui devnotnull/nodejs \
