Added gitub actions base config

--- a/.github/workflows/on_merge_main.yml
+++ b/.github/workflows/on_merge_main.yml
@@ -107,6 +107,8 @@ jobs:
         helm upgrade --install devnotnull-ui devnotnull/nodejs \
         -f ./helm/values-production.yaml \
         --version 1 \
+        --set env.NODE_RUNTIME_ENV=production \
+        --set env.CDN_BUCKET=production \
         --set image.repository=alexbrown201/devnotnull-ui:latest \
         --set port=3000 \
         --set service.type=LoadBalancer \
