--- a/.github/workflows/on_merge_main.yml
+++ b/.github/workflows/on_merge_main.yml
@@ -23,6 +23,14 @@ jobs:
       with:
         fetch-depth: '0'
 
+    - name: Bump version and push tag
+      id: bump-tag
+      uses: anothrNick/github-tag-action@1.36.0
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        WITH_V: true
+        INITIAL_VERSION: 1.0.0
+      
     - uses: actions/setup-node@v2
       with:
         node-version: '16'
@@ -106,7 +114,7 @@ jobs:
     - run: |
         helm upgrade --install devnotnull-ui devnotnull/nodejs \
         -f ./helm/values-production.yaml \
-        --version 1 \
+        --version ${{ steps.bump-tag.new_tag }} \
         --set env.NODE_RUNTIME_ENV=production \
         --set env.CDN_BUCKET=production \
         --set image.repository=alexbrown201/devnotnull-ui:latest \
@@ -114,10 +122,3 @@ jobs:
         --set service.type=LoadBalancer \
         --set service.loadBalancerIP=10.150.10.134 \
         --set image.pullPolicy=Always
-
-    - name: Bump version and push tag
-      uses: anothrNick/github-tag-action@1.36.0
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        WITH_V: true
-        INITIAL_VERSION: 1.0.0
