--- a/.github/workflows/on_push_development.yml
+++ b/.github/workflows/on_push_development.yml
@@ -105,11 +105,11 @@ jobs:
 
     - run: |
        helm upgrade --install devnotnull-ui-${{ github.ref_name }} devnotnull/nodejs \
-        -f ./helm/values-development.yaml \
+        --version 2 \
         --set env.NODE_RUNTIME_ENV=development \
         --set env.CDN_BUCKET=${{ github.ref_name }} \
-        --version 1 \
         --set image.repository=alexbrown201/devnotnull-ui:${{ github.ref_name }} \
         --set port=3000 \
         --set service.type=LoadBalancer \
-        --set image.pullPolicy=Always
+        --set image.pullPolicy=Always \
+        --set replicaCount=1
