Updated base node chart

--- a/.github/workflows/on_merge_main.yml
+++ b/.github/workflows/on_merge_main.yml
@@ -99,7 +99,11 @@ jobs:
         file: ./Dockerfile
         push: true
         tags: alexbrown201/devnotnull-ui:latest
-        
+
+    - run: helm repo add devnotnull https://devnotnull-helm.s3.eu-west-2.amazonaws.com
+
+    - run: helm repo update
+ 
     - name: Create S3 bucket
       run: aws s3api create-bucket --bucket devnotnull-ui-production --region us-east-1 || true
 
@@ -111,8 +115,6 @@ jobs:
 
     - run: |
         aws s3api put-bucket-policy --bucket devnotnull-ui-production --policy '{"Version": "2008-10-17", "Statement": [{ "Sid": "AllowPublicRead", "Effect": "Allow", "Principal": { "AWS": "*" }, "Action": ["s3:GetObject"], "Resource": ["arn:aws:s3:::devnotnull-ui-production/*" ] }] }'
-
-    - run: helm repo add devnotnull https://devnotnull-helm.s3.eu-west-2.amazonaws.com
 
     - run: |
         helm upgrade --install devnotnull-ui devnotnull/nodejs \
