--- a/.github/workflows/on_push_development.yml
+++ b/.github/workflows/on_push_development.yml
@@ -106,6 +106,8 @@ jobs:
     - run: |
         aws s3api put-bucket-policy --bucket devnotnull-ui-${{ github.ref_name }} --policy '{"Version": "2008-10-17", "Statement": [{ "Sid": "AllowPublicRead", "Effect": "Allow", "Principal": { "AWS": "*" }, "Action": ["s3:GetObject"], "Resource": ["arn:aws:s3:::devnotnull-ui-${{ github.ref_name }}/*" ] }] }'
 
+    - run: helm uninstall devnotnull-ui-${{ github.ref_name }}
+
     - run: |
        helm upgrade --install devnotnull-ui-${{ github.ref_name }} devnotnull/nodejs \
         --version 2 \
