--- a/package.json
+++ b/package.json
@@ -197,6 +197,7 @@
   "dependencies": {
     "@apollo/client": "^3.3.21",
     "@babel/runtime": "^7.12.5",
+    "@types/react-router-dom": "^5.3.3",
     "@types/react-syntax-highlighter": "^13.5.2",
     "aws-serverless-express": "^3.4.0",
     "classnames": "^2.2.6",
