Updated GA action step name and helm install flow

--- a/.github/workflows/on_merge_main.yml
+++ b/.github/workflows/on_merge_main.yml
@@ -6,7 +6,7 @@ on:
       - main
 
 jobs:
-  deploy-api:
+  deploy-app:
     runs-on: 'ubuntu-latest'
     defaults:
       run:
@@ -115,6 +115,8 @@ jobs:
 
     - run: |
         aws s3api put-bucket-policy --bucket devnotnull-ui-production --policy '{"Version": "2008-10-17", "Statement": [{ "Sid": "AllowPublicRead", "Effect": "Allow", "Principal": { "AWS": "*" }, "Action": ["s3:GetObject"], "Resource": ["arn:aws:s3:::devnotnull-ui-production/*" ] }] }'
+
+    - run: helm uninstall devnotnull-ui
 
     - run: |
         helm upgrade --install devnotnull-ui devnotnull/nodejs \
