--- a/.github/workflows/on_merge_main.yml
+++ b/.github/workflows/on_merge_main.yml
@@ -117,6 +117,7 @@ jobs:
         aws s3api put-bucket-policy --bucket devnotnull-ui-production --policy '{"Version": "2008-10-17", "Statement": [{ "Sid": "AllowPublicRead", "Effect": "Allow", "Principal": { "AWS": "*" }, "Action": ["s3:GetObject"], "Resource": ["arn:aws:s3:::devnotnull-ui-production/*" ] }] }'
 
     - run: helm uninstall devnotnull-ui
+      continue-on-error: true
 
     - run: |
         helm upgrade --install devnotnull-ui devnotnull/nodejs \
