Updated GA action step name and helm install flow

--- a/.github/workflows/on_merge_main.yml
+++ b/.github/workflows/on_merge_main.yml
@@ -120,7 +120,7 @@ jobs:
       continue-on-error: true
 
     - run: |
-        helm upgrade --install devnotnull-ui devnotnull/nodejs \
+        helm install devnotnull-ui devnotnull/nodejs \
         --version 2 \
         --set env.NODE_RUNTIME_ENV=production \
         --set env.CDN_BUCKET=production \
