--- a/.github/workflows/on_push_development.yml
+++ b/.github/workflows/on_push_development.yml
@@ -14,7 +14,7 @@ jobs:
     env:
       AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
       AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-      KUBECONFIG_FILE: '${{ secrets.PROD_KUBECONFIG }}'
+      KUBECONFIG_FILE: '${{ secrets.KUBECONFIG_PROD }}'
 
     steps:
 
@@ -48,9 +48,9 @@ jobs:
       env:
         VPN_CONFIG: ${{secrets.VPN_CONFIG}}
 
-    - run: 'mkdir ~/.kube && echo "$PROD_KUBECONFIG" > ~/.kube/config'
+    - run: 'mkdir ~/.kube && echo "$KUBECONFIG_FILE" > ~/.kube/config'
       env:
-        PROD_KUBECONFIG: ${{secrets.PROD_KUBECONFIG}}
+        KUBECONFIG_FILE: ${{secrets.KUBECONFIG_FILE}}
 
     - name: Set up QEMU
       uses: docker/setup-qemu-action@v1
