--- a/.github/workflows/on_push_development.yml
+++ b/.github/workflows/on_push_development.yml
@@ -52,6 +52,8 @@ jobs:
       env:
         KUBECONFIG_FILE: ${{secrets.KUBECONFIG_PROD}}
 
+    - run: sudo chown $(id -u):$(id -g) ~/.kube/config
+
     - name: Set up QEMU
       uses: docker/setup-qemu-action@v1
 
