--- a/package.json
+++ b/package.json
@@ -197,34 +197,35 @@
   "dependencies": {
     "@apollo/client": "^3.3.21",
     "@babel/runtime": "^7.12.5",
-    "@types/react-router-dom": "^5.3.3",
+    "@lagunovsky/redux-react-router": "^4.0.0",
+    "@types/express": "^4.17.13",
+    "@types/react-dom": "^18.0.6",
     "@types/react-syntax-highlighter": "^13.5.2",
     "aws-serverless-express": "^3.4.0",
     "classnames": "^2.2.6",
     "connected-react-router": "^6.7.0",
     "core-js": "^3.8.2",
     "cross-fetch": "^3.1.4",
-    "express": "^4.16.4",
+    "express": "4.18.1",
     "fs-extra": "7.0.0",
     "graphql": "^15.5.0",
     "moment": "^2.24.0",
-    "react": "17.0.2",
-    "react-dom": "17.0.2",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
     "react-gtm-module": "^2.0.11",
     "react-helmet": "6.1.0",
     "react-hot-loader": "4.13.0",
-    "react-redux": "7.2.6",
-    "react-router-dom": "5.2.1",
+    "react-redux": "8.0.2",
+    "react-router-dom": "6.3.0",
     "react-router-redux": "4.0.8",
     "react-syntax-highlighter": "^15.5.0",
     "redux-devtools": "^3.5.0",
     "redux-devtools-extension": "2.13.8",
-    "redux-saga": "1.1.3",
-    "redux-saga-requests": "0.2.1",
-    "redux-saga-requests-graphql": "0.2.0",
+    "redux-saga": "1.2.0",
     "regenerator-runtime": "0.13.3",
     "reselect": "4.0.0",
     "resolve": "1.17.0",
+    "source-map-support": "^0.5.21",
     "typesafe-actions": "5.1.0"
   },
   "browserslist": [
