--- a/package.json
+++ b/package.json
@@ -212,9 +212,11 @@
     "moment": "^2.24.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-ga": "^3.3.1",
     "react-gtm-module": "^2.0.11",
     "react-helmet": "6.1.0",
     "react-hot-loader": "4.13.0",
+    "react-intersection-observer": "^9.4.0",
     "react-redux": "8.0.2",
     "react-router-dom": "6.3.0",
     "react-router-redux": "4.0.8",
@@ -226,7 +228,8 @@
     "reselect": "4.0.0",
     "resolve": "1.17.0",
     "source-map-support": "^0.5.21",
-    "typesafe-actions": "5.1.0"
+    "typesafe-actions": "5.1.0",
+    "web-vitals": "^3.0.1"
   },
   "browserslist": [
     ">0.2%",
