--- a/package.json
+++ b/package.json
@@ -34,6 +34,8 @@
     "build:style-typings": "node webpack/style-typings.js",
     "lint": "eslint ./src --ext .js --ext .ts --ext .tsx",
     "lint:fix": "eslint ./src --ext .js --ext .ts --ext .tsx --fix",
+    "lint:css": "stylelint '**/*.css'",
+    "lint:css:fix": "stylelint '**/*.css' --fix",
     "types": "tcm src",
     "devserver:pure": "cross-env NODE_ENV=development TARGET=client webpack serve --mode development --inline --hot",
     "prodserver:pure": "cross-env NODE_ENV=production TARGET=client webpack serve --mode production",
@@ -44,7 +46,8 @@
     "deploy:dev": "yarn build:dev && serverless deploy --verbose --stage development",
     "deploy:prod": "yarn build:prod && serverless deploy --verbose --stage production",
     "deploy:pure:dev": "serverless deploy --verbose --stage development",
-    "deploy:pure:prod": "serverless deploy --verbose --stage production"
+    "deploy:pure:prod": "serverless deploy --verbose --stage production",
+    "prepare": "husky install"
   },
   "devDependencies": {
     "@babel/cli": "^7.12.1",
@@ -82,8 +85,8 @@
     "@types/webpack-env": "^1.13.9",
     "@types/webpack-hot-middleware": "^2.16.5",
     "@types/webpack-merge": "^5.0.0",
-    "@typescript-eslint/eslint-plugin": "^3.10.1",
-    "@typescript-eslint/parser": "^3.10.1",
+    "@typescript-eslint/eslint-plugin": "^5.36.2",
+    "@typescript-eslint/parser": "^5.36.2",
     "assets-webpack-plugin": "^7.0.0",
     "autoprefixer": "^7.1.6",
     "aws-sdk": "^2.824.0",
@@ -107,7 +110,7 @@
     "enzyme": "^3.10.0",
     "enzyme-adapter-react-16": "^1.14.0",
     "enzyme-to-json": "^3.4.0",
-    "eslint": "^7.8.10",
+    "eslint": "^8.23.0",
     "eslint-config-airbnb": "^18.2.0",
     "eslint-config-prettier": "^7.1.0",
     "eslint-import-resolver-webpack": "^0.12.0",
@@ -121,7 +124,7 @@
     "file-loader": "^3.0.1",
     "fork-ts-checker-webpack-plugin": "^1.3.5",
     "http-server": "^0.12.3",
-    "husky": "^8.0.1",
+    "husky": "^8.0.0",
     "identity-obj-proxy": "^3.0.0",
     "ignore-styles": "^5.0.1",
     "image-webpack-loader": "^7.0.0",
@@ -168,9 +171,9 @@
     "serverless-s3-sync": "^1.15.0",
     "source-map-explorer": "^2.0.0",
     "style-loader": "^2.0.0",
-    "stylelint": "^10.1.0",
+    "stylelint": "^14.11.0",
     "stylelint-config-prettier": "^5.2.0",
-    "stylelint-config-standard": "^18.3.0",
+    "stylelint-config-standard": "^28.0.0",
     "stylelint-prettier": "^1.1.1",
     "stylelint-scss": "^3.9.0",
     "terser-webpack-plugin": "^5.0.3",
@@ -200,6 +203,7 @@
     "@lagunovsky/redux-react-router": "^4.0.0",
     "@types/express": "^4.17.13",
     "@types/react-dom": "^18.0.6",
+    "@types/react-helmet": "^6.1.5",
     "@types/react-syntax-highlighter": "^13.5.2",
     "aws-serverless-express": "^3.4.0",
     "classnames": "^2.2.6",
@@ -228,6 +232,8 @@
     "reselect": "4.0.0",
     "resolve": "1.17.0",
     "source-map-support": "^0.5.21",
+    "stylelint-config-prettier-scss": "^0.0.1",
+    "stylelint-config-standard-scss": "^5.0.0",
     "typesafe-actions": "5.1.0",
     "web-vitals": "^3.0.1"
   },
