--- a/package.json
+++ b/package.json
@@ -195,23 +195,29 @@
     "webpack-node-externals": "^1.7.2",
     "webpackbar": "^4.0.0",
     "whybundled": "^1.4.2",
-    "workbox-webpack-plugin": "^6.0.2"
+    "workbox-webpack-plugin": "^6.0.2",
+    "stylelint-config-prettier-scss": "^0.0.1",
+    "stylelint-config-standard-scss": "^5.0.0",
+    "stylelint-selector-bem-pattern": "^2.1.1",
+    "@types/express": "^4.17.13",
+    "@types/react-dom": "^18.0.6",
+    "@types/react-helmet": "^6.1.5",
+    "fs-extra": "7.0.0",
+    "cross-fetch": "^3.1.4"
   },
   "dependencies": {
     "@apollo/client": "^3.3.21",
     "@babel/runtime": "^7.12.5",
+    "@considonet/stylelint-config-bem": "^1.0.1",
+    "@considonet/stylelint-config-order": "^1.0.1",
+    "@considonet/stylelint-config-scss": "^1.0.1",
     "@lagunovsky/redux-react-router": "^4.0.0",
-    "@types/express": "^4.17.13",
-    "@types/react-dom": "^18.0.6",
-    "@types/react-helmet": "^6.1.5",
     "@types/react-syntax-highlighter": "^13.5.2",
     "aws-serverless-express": "^3.4.0",
     "classnames": "^2.2.6",
     "connected-react-router": "^6.7.0",
     "core-js": "^3.8.2",
-    "cross-fetch": "^3.1.4",
     "express": "4.18.1",
-    "fs-extra": "7.0.0",
     "graphql": "^15.5.0",
     "moment": "^2.24.0",
     "react": "18.2.0",
@@ -232,8 +238,6 @@
     "reselect": "4.0.0",
     "resolve": "1.17.0",
     "source-map-support": "^0.5.21",
-    "stylelint-config-prettier-scss": "^0.0.1",
-    "stylelint-config-standard-scss": "^5.0.0",
     "typesafe-actions": "5.1.0",
     "web-vitals": "^3.0.1"
   },
