--- a/.github/workflows/on_merge_main.yml
+++ b/.github/workflows/on_merge_main.yml
@@ -81,8 +81,10 @@ jobs:
 
     - run: npm install -g yarn
 
-    - run: yarn install 
+    - run: yarn lint 
 
+    - run: yarn test
+    
     - run: yarn build:prod:pure
 
     - name: Build and push
