--- a/.github/workflows/on_push_development.yml
+++ b/.github/workflows/on_push_development.yml
@@ -70,6 +70,10 @@ jobs:
 
     - run: yarn install 
 
+    - run: yarn lint 
+
+    - run: yarn test
+
     - run: yarn build:prod:pure
 
     - name: Build and push
