--- a/package.json
+++ b/package.json
@@ -75,9 +75,11 @@
     "@types/aws-lambda": "^8.10.46",
     "@types/cheerio": "^0.22.11",
     "@types/classnames": "^2.2.8",
-    "@types/enzyme": "^3.10.5",
+    "@types/express": "^4.17.13",
     "@types/jest": "^24.0.13",
     "@types/node": "^14.0.8",
+    "@types/react-dom": "^18.0.6",
+    "@types/react-helmet": "^6.1.5",
     "@types/serialize-javascript": "^1.5.0",
     "@types/source-map-support": "^0.5.1",
     "@types/webpack": "^4.41.7",
@@ -103,13 +105,11 @@
     "concurrently": "^4.1.0",
     "copy-webpack-plugin": "^7.0.0",
     "cross-env": "^4.0.0",
+    "cross-fetch": "^3.1.4",
     "css-loader": "^5.0.1",
     "css-minimizer-webpack-plugin": "^1.1.5",
     "cz-customizable": "^6.2.0",
     "duplicate-package-checker-webpack-plugin": "^3.0.0",
-    "enzyme": "^3.10.0",
-    "enzyme-adapter-react-16": "^1.14.0",
-    "enzyme-to-json": "^3.4.0",
     "eslint": "^8.23.0",
     "eslint-config-airbnb": "^18.2.0",
     "eslint-config-prettier": "^7.1.0",
@@ -123,6 +123,7 @@
     "extend": "^3.0.1",
     "file-loader": "^3.0.1",
     "fork-ts-checker-webpack-plugin": "^1.3.5",
+    "fs-extra": "7.0.0",
     "http-server": "^0.12.3",
     "husky": "^8.0.0",
     "identity-obj-proxy": "^3.0.0",
@@ -131,12 +132,8 @@
     "isomorphic-style-loader": "^5.1.0",
     "istanbul": "^0.4.5",
     "istanbul-reports": "^1.3.0",
-    "jest": "^24.0.0",
-    "jest-each": "^24.0.0",
-    "jsdom": "^11.11.0",
-    "lerna": "^3.4.0",
+    "jest": "^29.0.3",
     "lint-staged": "^8.1.5",
-    "madge": "^3.4.4",
     "mini-css-extract-plugin": "^1.3.3",
     "mockdate": "^2.0.2",
     "nodemon": "^2.0.7",
@@ -173,15 +170,16 @@
     "style-loader": "^2.0.0",
     "stylelint": "^14.11.0",
     "stylelint-config-prettier": "^5.2.0",
+    "stylelint-config-prettier-scss": "^0.0.1",
     "stylelint-config-standard": "^28.0.0",
+    "stylelint-config-standard-scss": "^5.0.0",
     "stylelint-prettier": "^1.1.1",
     "stylelint-scss": "^3.9.0",
+    "stylelint-selector-bem-pattern": "^2.1.1",
     "terser-webpack-plugin": "^5.0.3",
-    "ts-jest": "^24.0.2",
-    "tslint": "^5.17.0",
-    "tslint-react": "^4.0.0",
+    "ts-jest": "^29.0.1",
     "typed-css-modules": "^0.6.5",
-    "typescript": "^4.1.0",
+    "typescript": "^4.8.3",
     "url-loader": "^4.1.1",
     "wait-on": "^6.0.0",
     "webpack": "^5.11.0",
@@ -195,15 +193,7 @@
     "webpack-node-externals": "^1.7.2",
     "webpackbar": "^4.0.0",
     "whybundled": "^1.4.2",
-    "workbox-webpack-plugin": "^6.0.2",
-    "stylelint-config-prettier-scss": "^0.0.1",
-    "stylelint-config-standard-scss": "^5.0.0",
-    "stylelint-selector-bem-pattern": "^2.1.1",
-    "@types/express": "^4.17.13",
-    "@types/react-dom": "^18.0.6",
-    "@types/react-helmet": "^6.1.5",
-    "fs-extra": "7.0.0",
-    "cross-fetch": "^3.1.4"
+    "workbox-webpack-plugin": "^6.0.2"
   },
   "dependencies": {
     "@apollo/client": "^3.3.21",
@@ -212,6 +202,7 @@
     "@considonet/stylelint-config-order": "^1.0.1",
     "@considonet/stylelint-config-scss": "^1.0.1",
     "@lagunovsky/redux-react-router": "^4.0.0",
+    "@testing-library/react": "^13.4.0",
     "@types/react-syntax-highlighter": "^13.5.2",
     "aws-serverless-express": "^3.4.0",
     "classnames": "^2.2.6",
@@ -219,6 +210,7 @@
     "core-js": "^3.8.2",
     "express": "4.18.1",
     "graphql": "^15.5.0",
+    "jest-environment-jsdom": "^29.0.3",
     "moment": "^2.24.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
