--- a/.github/workflows/branch_name_validation.yml
+++ b/.github/workflows/branch_name_validation.yml
@@ -8,7 +8,7 @@ jobs:
       - uses: deepakputhraya/action-branch-name@master
         with:
           regex: '([a-z])+\/([a-z])+'
-          allowed_prefixes: 'feature,hotfix,bug' 
+          allowed_prefixes: 'feat,fix,bug' 
           ignore: main,develop 
           min_length: 5 
           max_length: 100 
