--- a/.github/workflows/on_push_development.yml
+++ b/.github/workflows/on_push_development.yml
@@ -43,13 +43,14 @@ jobs:
       run: |
         echo "##[set-output name=branch;]$(echo ${GITHUB_REF#refs/heads/})"
         echo "::set-output name=sha_short::$(git rev-parse --short HEAD)"
-        echo "::set-output name=branch_formatted::$(${GITHUB_REF#refs/heads//.gif/.$new_extension})"
+        echo "##[set-output name=branch;]$(echo ${GITHUB_REF#refs/heads/} | tr / -)"
     
     - name: Another step
       run: |
         echo "Branch: ${{ steps.vars.outputs.branch }}"
         echo "Sha: ${{ steps.vars.outputs.sha_short }}"
         echo "Branch formatted: ${{ steps.vars.outputs.branch_formatted }}"
+        echo "${{ steps.vars.outputs.branch }}" | tr / -
 
     - run: |
         curl https://baltocdn.com/helm/signing.asc | sudo apt-key add -
